fix: resolve overflow issues affecting layout responsiveness

--- a/styles/global.css
+++ b/styles/global.css
@@ -83,9 +83,6 @@ a{
   display: none;
 }
 @media (width > 80em) {
-  body{
-    overflow: hidden;
-  }
   .desktop-only {
     display: initial;
   }
@@ -96,6 +93,6 @@ a{
     margin-inline: auto;
     max-width: 85.375rem;
     padding-inline: 4.375rem;
-    margin-block: 6.75rem;
+    margin-block: 4.75rem;
 }
 }
